<resources>
    <string name="app_name">Onramp Android Take Home</string>
    <string name="action_settings">Settings</string>

    <string name="ironman_name">Iron Man</string>
    <string name="ironman_description">Genius. Billionaire. Playboy. Philanthropist. Tony Stark\'s confidence is only matched by his high-flying abilities as the hero called Iron Man.</string>
    <string name="ironman_imagePath">https://d13ezvd6yrslxm.cloudfront.net/wp/wp-content/images/ironman-spiderman-homecoming-poster-frontpage-700x354.jpg</string>
    <string name="cap_name">Captain America</string>
    <string name="cap_description">Recipient of the Super-Soldier serum, World War II hero Steve Rogers fights for American ideals as one of the world’s mightiest mHeroes and the leader of the Avengers.</string>
    <string name="cap_imagePath">https://i.pinimg.com/736x/28/53/bb/2853bbd8f332840bbd71531df2c88499.jpg</string>
    <string name="hulk_name">The Hulk</string>
    <string name="hulk_imagePath">https://secure.img1-fg.wfcdn.com/im/54588047/resize-h800-w800%5Ecompr-r85/3523/35239336/%2527The+Incredible+Hulk%252C+Comic+Book%2527+Graphic+Art+on+Canvas.jpg</string>
    <string name="hulk_description">Dr. Bruce Banner lives a life caught between the soft-spoken scientist he’s always been and the uncontrollable green monster powered by his rage.</string>
    <string name="blackWidow_name">Black Widow</string>
    <string name="blackWidow_imagePath">https://static.comicvine.com/uploads/original/11118/111183611/5193180-tumblr_nyxu5mbe891sbqrlmo1_1280.jpg</string>
    <string name="blackWidow_description">Despite super spy Natasha Romanoff’s checkered past, she’s become one of S.H.I.E.L.D.’s most deadly assassins and a frequent member of the Avengers.</string>
    <string name="thor_imagePath">https://nerdist.com/wp-content/uploads/2017/10/2853187-comics_thor_marvel_comics_avengers_mjolnir_fresh_hd_wallpaper.jpg</string>
    <string name="thor_name">Thor</string>
    <string name="thor_description">The son of Odin uses his mighty abilities as the God of Thunder to protect his home Asgard and planet Earth alike.</string>
    <string name="hawkeye_name">Hawkeye</string>
    <string name="hawkeye_description">A master marksman and longtime friend of Black Widow, Clint Barton serves as the Avengers’ amazing archer.</string>
    <string name="hawkeye_imagePath">https://i.pinimg.com/originals/dc/cc/41/dccc419a7c2812e8769ebcb479ed8225.jpg</string>
    <string name="iron_man_url">https://www.marvel.com/characters/iron-man-tony-stark</string>
    <string name="cap_url">https://www.marvel.com/characters/captain-america-steve-rogers</string>
    <string name="hulk_url">https://www.marvel.com/characters/hulk-bruce-banner</string>
    <string name="blackWidow_url">https://www.marvel.com/characters/black-widow-natasha-romanoff</string>
    <string name="thor_url">https://www.marvel.com/characters/thor-thor-odinson</string>
    <string name="hawkeye_url">https://www.marvel.com/characters/hawkeye-clint-barton</string>
    <string name="comiccon_sanDiego_url">https://www.comic-con.org/frontpage</string>
    <string name="comicon_ny_url">https://www.newyorkcomiccon.com</string>
    <string name="more_hero_details">More hero details</string>
    <string name="san_diego_comic_con">San Diego Comic Con</string>
    <string name="event_details">Event Details</string>
    <string name="new_york_comic_con">New York Comic Con</string>
    <string name="events">Events</string>
    <string name="san_diego_imageUrl">https://upload.wikimedia.org/wikipedia/en/thumb/9/97/San_Diego_Comic-Con_International_logo.svg/829px-San_Diego_Comic-Con_International_logo.svg.png</string>
    <string name="ny_imageUrl">https://www.newyorkcomiccon.com/RNA/RNA_NewYorkComicCon_V2/_brand-guidelines/NYCC-Do-02.jpg?v=636579374296990468</string>
    <string name="sd_event_date">July 18–21, 2019</string>
    <string name="ny_event_date">October 3–6, 2019</string>
    <string name="ny_event_location">Jacob K. Javits Convention Center</string>
    <string name="sd_event_location">San Diego Convention Center</string>
    <string name="learn_more">Learn more</string>
    <string name="where">WHERE:</string>
    <string name="when">WHEN:</string>


</resources>
